fix: contrast
Fix a problem with link cta contrast.

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 :root {
   --color-primary: hsl(231, 69%, 60%);
-  --color-secondary: hsl(0, 94%, 66%);
+  --color-secondary: hsl(0, 54%, 53%);
   --color-headings: hsl(229, 31%, 21%);
   --color-universal: hsl(229, 8%, 60%);
   --color-universal-dark: hsl(231, 5%, 48%);
